@@ -1,5 +1,9 @@
 2009-11-24  Felix Wolfsteller <felix.wolfsteller@intevation.de>
 
+	* misc/network.c: Minor cosmetics.
+
+2009-11-24  Felix Wolfsteller <felix.wolfsteller@intevation.de>
+
 	* misc/network.c: Major reformatting, docs and comments.
 
 2009-11-24  Felix Wolfsteller <felix.wolfsteller@intevation.de>
